--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.2",
+    "floating-label-react": "^0.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-floating-label-input": "^3.0.5",
     "react-scripts": "1.1.4"
   },
   "scripts": {
